# saal

./: .dockerignore  .gitignore  AI.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  agents.yaml  build.rs  manifest-9.6.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
benches/: astro_bench.rs  environment_bench.rs  main_bench.rs  obs_bench.rs  sensor_bench.rs  sgp4_bench.rs  time_bench.rs  tle_bench.rs
benchmarks/: bench_astro.py  bench_environment.py  bench_main.py  bench_obs.py  bench_sensor.py  bench_sgp4.py  bench_time.py  bench_tle.py
lib/mac/arm/: libastrofunc.dylib  libdllmain.dylib  libelops.dylib  libenvconst.dylib  libextephem.dylib  libgcc_s.1.1.dylib  libgfortran.5.dylib  libobs.dylib  (+9 more)
lib/windows/: AstroFunc.lib  DllMain.lib  ElOps.lib  ExtEphem.lib  SatState.lib  Sensor.lib  Sgp4Prop.lib  TimeFunc.lib
python/pysaal/: __init__.py
python/saal/: __init__.py
skills/: python_typing.md  rust_perf.md  rust_pyo3.md  testing.md
src/: astro.rs  bindings.rs  enums.rs  environment.rs  get_set_string.rs  lib.rs  obs.rs  satellite.rs  sensor.rs  sgp4.rs  test_lock.rs  time.rs  tle.rs
src/bindings/: astro_interface.rs  enums.rs  environment_interface.rs  main_interface.rs  obs_interface.rs  sensor_interface.rs  sgp4_interface.rs  time_interface.rs  tle_interface.rs
stubs/pysaal/: __init__.pyi
stubs/saal/: __init__.pyi
tests/: test_astro_interface.py  test_environment_interface.py  test_main_interface.py  test_obs_interface.py  test_sensor_interface.py  test_sgp4_interface.py  test_time_interface.py  test_tle_interface.py
tests/data/: 2025-12-30-celestrak.3le  2025-12-30-celestrak.tle  test-b3-obs.txt
(+17 files in other folders)
