[package]
name = "saal"
version = "0.1.0"
edition = "2024"
authors = ["Brandon Sexton <brandon.taylor.sexton@gmail.com>"]
description = "Wrappers for the Standardized Astrodynamics Algorithms Library (SAAL)"
license = "MIT"
exclude = [
  "tests/**",
  "benches/**",
  "benchmarks/**",
  "skills/**",
  "venv/**",
  "truth/**",
  "fort.*",
  "AI.md",
  "CONTRIBUTING.md",
  "agents.yaml",
]

[dependencies]
ctor = "0.6.3"
pyo3 = { version = "0.27.2", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]
name = "saal"

[features]
python = ["pyo3/extension-module"]

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[[bench]]
name = "astro_bench"
harness = false

[[bench]]
name = "time_bench"
harness = false

[[bench]]
name = "tle_bench"
harness = false

[[bench]]
name = "sgp4_bench"
harness = false
